Lesson 2 - working with generic templates

--- a/my_project/posts/templates/posts/posts_list.html
+++ b/my_project/posts/templates/posts/posts_list.html
@@ -1,12 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-  About
+  Posts List
 {% endblock %}
 
 {% block content %}
-    <h1>About</h1>
-    <p>Check out<a href="/"> Home</a> page</p>
+    <h1>Posts Lists</h1>
 {% endblock %}
 
 
