--- a/my_project/templates/home.html
+++ b/my_project/templates/home.html
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <!-- tak łądujesz pliki statyczne z 2 linia włacznie -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-<body>
+{% extends 'layout.html' %}
 
+{% block title %}
+  Home
+{% endblock %}
+
+{% block content %}
   <h1>Home</h1>
-  <p>Check out<a href="/about"> About</a> page</p>
-
-
-  
-</body>
-</html>
+  <p>Check out my <a href="/about">About</a> website</p>
+{% endblock %}
