Lesson 6 - Dynamic data in django templates. get data from db

--- a/my_project/templates/layout.html
+++ b/my_project/templates/layout.html
@@ -19,7 +19,10 @@
 
     <a href="/">Home</a> |
     <a href="/about">About</a> |
-    <a href="/posts">Posts</a> |
+    <!-- ten zapis bedzie dobry jesli w views nadasz atrybut name dla url'a -->
+     <!-- dodatkowo mozesz uczynic url bardziej specyficznym patrz urls.py linia 5 -->
+    <a href="{% url 'posts:list' %}">Posts</a>
+    <!-- <a href="/posts">Posts</a> | -->
   </nav>
 
   <main>
