Lesson 7 - uploading pages images via admin panel

--- a/my_project/templates/layout.html
+++ b/my_project/templates/layout.html
@@ -17,7 +17,9 @@
 
   <nav>
 
-    <a href="/">Home</a> |
+    <a href="/">
+      <span role="img" aria-label="Home">Home icon</span>
+    </a> |
     <a href="/about">About</a> |
     <!-- ten zapis bedzie dobry jesli w views nadasz atrybut name dla url'a -->
      <!-- dodatkowo mozesz uczynic url bardziej specyficznym patrz urls.py linia 5 -->
