--- a/my_project/posts/templates/posts/post_page.html
+++ b/my_project/posts/templates/posts/post_page.html
@@ -4,6 +4,7 @@
   {% endblock %} 
 {% block content %}
 <section>
+  <img class="banner" src="{{post.banner.url}}" alt="{{post.title}}"/>
   <h1>{{post.title}}</h1>
   <p>{{post.date}}</p>
   <p>{{post.body}}</p>
