Lesson 8 - registtration form, styling

--- a/my_project/static/css/style.css
+++ b/my_project/static/css/style.css
@@ -45,3 +45,13 @@ a:hover {
   width: 100%;
   max-width: 800px;
 }
+
+.alert.alert-danger {
+  color: red;
+  font-size: 30px;
+}
+
+.errorlist li {
+  color: red;
+  font-size: 30px;
+}
