--- a/my_project/templates/layout.html
+++ b/my_project/templates/layout.html
@@ -23,7 +23,8 @@
     <a href="/about">About</a> |
     <!-- ten zapis bedzie dobry jesli w views nadasz atrybut name dla url'a -->
      <!-- dodatkowo mozesz uczynic url bardziej specyficznym patrz urls.py linia 5 -->
-    <a href="{% url 'posts:list' %}">Posts</a>
+    <a href="{% url 'posts:list' %}">Posts</a> |
+    <a href="{% url 'users:register' %}">Rejestracja</a>
     <!-- <a href="/posts">Posts</a> | -->
   </nav>
 
