Lesson 10- logout , condition navbar items, routing

--- a/my_project/templates/layout.html
+++ b/my_project/templates/layout.html
@@ -24,10 +24,25 @@
     <!-- ten zapis bedzie dobry jesli w views nadasz atrybut name dla url'a -->
      <!-- dodatkowo mozesz uczynic url bardziej specyficznym patrz urls.py linia 5 -->
     <a href="{% url 'posts:list' %}">📑</a> |
-    <a href="{% url 'users:register' %}">🚀</a> |
-    <a href="{% url 'users:login' %}">
-      <span role="img" aria-label="Login" title="Login">🔐</span>
-    </a> 
+
+    <!-- protected page -->
+
+    {% if user.is_authenticated %}
+      <a href="{% url 'posts:new-post' %}">
+        <span role="img" aria-label="New Post" title="New Post">🆕</span>
+      </a> |
+      <form action="{% url 'users:logout' %}" class="logout" method="post">
+        {% csrf_token %}
+        <button class="logout-button" aria-label="User logout" title="User logout"><span role="img" aria-label="Home">👋</span></button>
+      </form>
+
+    {% else %}
+
+      <a href="{% url 'users:register' %}">🚀</a> |
+      <a href="{% url 'users:login' %}">
+        <span role="img" aria-label="Login" title="Login">🔐</span>
+      </a> |
+    {% endif %}
     <!-- <a href="/posts">Posts</a> | -->
   </nav>
 
