--- a/my_project/static/css/style.css
+++ b/my_project/static/css/style.css
@@ -21,8 +21,8 @@ nav {
 }
 
 main {
-  /* flex-grow: 1;
-  display: grid; */
+  flex-grow: 1;
+  display: grid;
   place-content: center;
 }
 
@@ -51,12 +51,64 @@ a:hover {
   font-size: 30px;
 }
 
+.form-with-validation {
+  font-size: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
+
+.form-with-validation div {
+  display: flex;
+  flex-flow: column;
+  gap: 0.5rem;
+}
+
+.form-with-validation input {
+  padding: 0.25rem;
+  max-width: 300px;
+}
+
+.form-submit {
+  padding: 0.5rem;
+  border-radius: 10px;
+  width: 125px;
+}
+
+.helptext {
+  font-size: 1rem;
+  margin-left: 1rem;
+}
+
+.helptext ul {
+  list-style-type: none;
+}
+
+
+.errorlist {
+  margin-left: 2rem;
+}
+
+.errorlist li::marker {
+ content: 🚨;
+}
+
 .errorlist li {
   color: red;
   font-size: 30px;
 }
 
-.form-with-validation input {
-  display: block;
-  width: 100%;
+form.logout {
+  display: inline;
+}
+
+.logout-button {
+  font-size: 2.5rem;
+  background-color: rgb(0, 0, 0, 0);
+  border: none;
+}
+
+.logout-button:hover {
+  opacity: .85;
 }
